Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70187

qtcanvas3d build failure - error: no member named 'Float32Array' in 'QV4::Heap::TypedArray'

    XMLWordPrintable

Details

    Description

      https://codereview.qt-project.org/#/c/237816/ Update submodules on '5.12' in qt5

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1535505409

      https://testresults.qt.io/coin/api/results/qt/qtcanvas3d/43d105fa08d2c7bd13e270cef797655abde76f6e/MacOSMacOS_10_12x86_64AndroidAndroid_ANYarmv7Clangqtci-macos-10.12-x86_64-8-257a5fRelease_DisableTests_OpenGLES2/916d9f1437db6e255d0d54f5e09e6dd3c39bd994/build_1535509699/log.txt.gz

      agent:2018/08/27 08:30:12 build.go:187: context3d.cpp:624:60: error: no member named 'Float32Array' in 'QV4::Heap::TypedArray'; did you mean 'QV4::Float32Array'?
      agent:2018/08/27 08:30:12 build.go:187:                 getTypedArrayAsRawDataPtr(array, arrayLen, QV4::Heap::TypedArray::Float32Array));
      agent:2018/08/27 08:30:12 build.go:187:                                                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2018/08/27 08:30:12 build.go:187:                                                            QV4::Float32Array
      agent:2018/08/27 08:30:12 build.go:187: /Users/qt/work/install/include/QtQml/5.12.0/QtQml/private/qv4typedarray_p.h:71:5: note: 'QV4::Float32Array' declared here
      agent:2018/08/27 08:30:12 build.go:187:     Float32Array,
      agent:2018/08/27 08:30:12 build.go:187:     ^
      agent:2018/08/27 08:30:13 build.go:187: context3d.cpp:808:65: error: no member named 'UInt8Array' in 'QV4::Heap::TypedArray'; did you mean 'QV4::UInt8Array'?
      agent:2018/08/27 08:30:13 build.go:187:     uchar *srcData = getTypedArrayAsRawDataPtr(pixels, byteLen, QV4::Heap::TypedArray::UInt8Array);
      agent:2018/08/27 08:30:13 build.go:187:                                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2018/08/27 08:30:13 build.go:187:                                                                 QV4::UInt8Array
      agent:2018/08/27 08:30:13 build.go:187: /Users/qt/work/install/include/QtQml/5.12.0/QtQml/private/qv4typedarray_p.h:65:5: note: 'QV4::UInt8Array' declared here
      agent:2018/08/27 08:30:13 build.go:187:     UInt8Array,
      agent:2018/08/27 08:30:13 build.go:187:     ^
      agent:2018/08/27 08:30:13 build.go:187: context3d.cpp:868:65: error: no member named 'UInt8Array' in 'QV4::Heap::TypedArray'; did you mean 'QV4::UInt8Array'?
      agent:2018/08/27 08:30:13 build.go:187:     uchar *srcData = getTypedArrayAsRawDataPtr(pixels, byteLen, QV4::Heap::TypedArray::UInt8Array);
      agent:2018/08/27 08:30:13 build.go:187:                                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2018/08/27 08:30:13 build.go:187:                                                                 QV4::UInt8Array
      agent:2018/08/27 08:30:13 build.go:187: /Users/qt/work/install/include/QtQml/5.12.0/QtQml/private/qv4typedarray_p.h:65:5: note: 'QV4::UInt8Array' declared here
      agent:2018/08/27 08:30:13 build.go:187:     UInt8Array,
      agent:2018/08/27 08:30:13 build.go:187:     ^
      agent:2018/08/27 08:30:13 build.go:187: context3d.cpp:1111:57: error: no member named 'UInt8Array' in 'QV4::Heap::TypedArray'; did you mean 'QV4::UInt8Array'?
      agent:2018/08/27 08:30:13 build.go:187:             srcData = getTypedArrayAsRawDataPtr(pixels, QV4::Heap::TypedArray::UInt8Array);
      agent:2018/08/27 08:30:13 build.go:187:                                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2018/08/27 08:30:13 build.go:187:                                                         QV4::UInt8Array
      agent:2018/08/27 08:30:13 build.go:187: /Users/qt/work/install/include/QtQml/5.12.0/QtQml/private/qv4typedarray_p.h:65:5: note: 'QV4::UInt8Array' declared here
      agent:2018/08/27 08:30:13 build.go:187:     UInt8Array,
      agent:2018/08/27 08:30:13 build.go:187:     ^
      agent:2018/08/27 08:30:13 build.go:187: context3d.cpp:1137:57: error: no member named 'UInt16Array' in 'QV4::Heap::TypedArray'; did you mean 'QV4::UInt16Array'?
      agent:2018/08/27 08:30:13 build.go:187:             srcData = getTypedArrayAsRawDataPtr(pixels, QV4::Heap::TypedArray::UInt16Array);
      agent:2018/08/27 08:30:13 build.go:187:                                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2018/08/27 08:30:13 build.go:187:                                                         QV4::UInt16Array
      agent:2018/08/27 08:30:13 build.go:187: /Users/qt/work/install/include/QtQml/5.12.0/QtQml/private/qv4typedarray_p.h:67:5: note: 'QV4::UInt16Array' declared here
      agent:2018/08/27 08:30:13 build.go:187:     UInt16Array,
      agent:2018/08/27 08:30:13 build.go:187:     ^
      agent:2018/08/27 08:30:13 build.go:187: context3d.cpp:1181:39: error: no member named 'NTypes' in 'QV4::Heap::TypedArray'
      agent:2018/08/27 08:30:13 build.go:187:     if (type < QV4::Heap::TypedArray::NTypes && arrayType != type)
      agent:2018/08/27 08:30:13 build.go:187:                ~~~~~~~~~~~~~~~~~~~~~~~^
      agent:2018/08/27 08:30:13 build.go:187: context3d.cpp:1199:82: error: no member named 'NTypes' in 'QV4::Heap::TypedArray'
      agent:2018/08/27 08:30:13 build.go:187:     return getTypedArrayAsRawDataPtr(jsValue, byteLength, QV4::Heap::TypedArray::NTypes);
      agent:2018/08/27 08:30:13 build.go:187:                                                           ~~~~~~~~~~~~~~~~~~~~~~~^
      agent:2018/08/27 08:30:13 build.go:187: context3d.cpp:1297:53: error: no member named 'UInt8Array' in 'QV4::Heap::TypedArray'; did you mean 'QV4::UInt8Array'?
      agent:2018/08/27 08:30:13 build.go:187:         srcData = getTypedArrayAsRawDataPtr(pixels, QV4::Heap::TypedArray::UInt8Array);
      agent:2018/08/27 08:30:13 build.go:187:                                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2018/08/27 08:30:13 build.go:187:                                                     QV4::UInt8Array
      agent:2018/08/27 08:30:13 build.go:187: /Users/qt/work/install/include/QtQml/5.12.0/QtQml/private/qv4typedarray_p.h:65:5: note: 'QV4::UInt8Array' declared here
      agent:2018/08/27 08:30:13 build.go:187:     UInt8Array,
      agent:2018/08/27 08:30:13 build.go:187:     ^
      agent:2018/08/27 08:30:13 build.go:187: context3d.cpp:1321:53: error: no member named 'UInt16Array' in 'QV4::Heap::TypedArray'; did you mean 'QV4::UInt16Array'?
      agent:2018/08/27 08:30:13 build.go:187:         srcData = getTypedArrayAsRawDataPtr(pixels, QV4::Heap::TypedArray::UInt16Array);
      agent:2018/08/27 08:30:13 build.go:187:                                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2018/08/27 08:30:13 build.go:187:                                                     QV4::UInt16Array
      agent:2018/08/27 08:30:13 build.go:187: /Users/qt/work/install/include/QtQml/5.12.0/QtQml/private/qv4typedarray_p.h:67:5: note: 'QV4::UInt16Array' declared here
      agent:2018/08/27 08:30:13 build.go:187:     UInt16Array,
      agent:2018/08/27 08:30:13 build.go:187:     ^
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            shausman Simon Hausmann
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes