Bump private API versions after typed array API changes

Task-number: QTBUG-70187
Change-Id: I94ef76bf2f5a2594bf6ea551864acfb0ccb48838
Reviewed-by: Liang Qi <liang.qi@qt.io>